@@ -98,6 +98,8 @@ fetchmail-6.4.0 (not yet released):
 * Fetchmail now detects if the server hangs up prematurely during SSL_connect()
   and reports this condition as such, and not just as SSL connection failure.
   (OpenSSL 1.0.2 reported incompatible with pop3.live.com by Jerry Seibert).
+* A foreground fetchmail can now accept a few more options while another copy is
+  running in the background.
 
 ## FIXES
 * Fix a typo in the FAQ. Submitted by David Lawyer, Debian Bug#706776.
@@ -134,10 +136,11 @@ fetchmail-6.4.0 (not yet released):
   messages. This will not be fixed, because the maintainer has no Kerberos 5
   server to test against. Use GSSAPI.
 
+--------------------------------------------------------------------------------
 
 fetchmail-6.3.26 (released 2013-04-23, 26180 LoC):
 
- CRITICAL BUG FIX for setups using "mimedecode":
+# CRITICAL BUG FIX for setups using "mimedecode":
 * The mimedecode feature failed to ship the last line of the body if it was
   encoded as quoted-printable and had a MIME soft line break in the very last
   line.  Reported by Lars Hecking in June 2011.
